--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -65,3 +65,23 @@ body{
     color: black;
 }
 
+.w-full {
+    width: 100%;
+}
+
+.h-auto {
+    height: auto;
+}
+
+.object-cover {
+    object-fit: cover;
+}
+
+#movieDetailsPopup {
+    backdrop-filter: blur(5px);
+    transition: opacity 1s ease-in-out;
+}
+
+#movieDetailsPopup.show {
+    opacity: 1;
+}
