--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body class="flex flex-col h-screen bg-black text-cfab7a font-raleway">
-    <a href="#" class="absolute top-0 right-0 m-4 text-4xl hover:text-white">TixOnline</a>
+    <a href="/" class="absolute top-0 right-0 m-4 text-4xl hover:text-white">TixOnline</a>
     <div class="flex flex-1">
         <div class="flex items-center justify-center w-1/2">
             <img src="/images/cinemabg.png" alt="Image" class="max-w-full max-h-full">
@@ -25,14 +25,14 @@
                             <label class="block mb-4 text-sm text-black font-raleway" for="username">USERNAME</label>
                             <input
                                 class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                id="username" type="text" placeholder="Insert your username" name="username" required>
+                                id="username" type="text" placeholder="Insert username" name="username" required>
                             <label class="block mb-4 text-sm text-black font-raleway" for="password">PASSWORD</label>
                             <input
                                 class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                 id="password" type="password" placeholder="Password" name="password" required>
                             <div class="flex items-center justify-center">
                                 <button
-                                    class="px-3 py-2 bg-black rounded text-cfab7a font-raleway hover:bg-red-700 focus:outline-none focus:shadow-outline"
+                                    class="px-3 py-2 text-white bg-red-600 rounded font-raleway hover:bg-red-800 focus:outline-none focus:shadow-outline"
                                     type="submit">Sign In
                                 </button>
                             </div>
