create loginAdmin and registerAdmin page

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -129,11 +129,11 @@
                                                                                 </div>
                                                                                 <div class="text-right">
                                                                                     <button type="submit"
-                                                                                        class="px-4 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700"
-                                                                                        onclick="return comparePasswords()">Sign Up</button>
+                                                                                        class="px-3 py-2 font-semibold text-white bg-red-600 rounded font-raleway hover:bg-red-800 focus:outline-none focus:shadow-outline"
+                                                                                        onclick="return comparePasswords()">Sign
+                                                                                        Up</button>
                                                                                 </div>
                                                                             </div>
-
                 </form>
             </div>
         </div>
