--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/fe_style.css">
-    <script src="/script/script.js" defer></script>
 </head>
 
 <body class="flex flex-col h-screen bg-black text-cfab7a font-raleway">
@@ -30,9 +29,9 @@
                             <input
                                 class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                 id="password" type="password" placeholder="Password" name="password" required>
-                            <div class="flex items-center justify-center">
+                            <div class="flex items-center justify-end">
                                 <button
-                                    class="px-3 py-2 text-white bg-red-600 rounded font-raleway hover:bg-red-800 focus:outline-none focus:shadow-outline"
+                                    class="px-3 py-2 font-semibold text-white bg-red-600 rounded font-raleway hover:bg-red-800 focus:outline-none focus:shadow-outline"
                                     type="submit">Sign In
                                 </button>
                             </div>
@@ -42,4 +41,5 @@
             </div>
         </div>
     </div>
+    <script src="/script/script.js" defer></script>
 </body>
