--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -1,23 +1,46 @@
-<%-include("./partials/header")-%>
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Register</title>
-</head>
-<body>
-    <h1>Register</h1>
-    <form method="POST" action="/loginAdmin">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+    <head>
+        <meta charset="UTF-8">
+        <title>Login Admin</title>
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/styles/fe_style.css">
+    </head>
 
-        <br><br>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-
-        <br><br>
-
-        <input type="submit" value="Register">
-    </form>
+<body class="flex flex-col h-screen bg-black text-cfab7a font-raleway">
+    <a href="/" class="absolute top-0 right-0 m-4 text-4xl hover:text-white">TixOnline</a>
+    <div class="flex flex-1">
+        <div class="flex items-center justify-center w-1/2">
+            <img src="/images/cinemabg.png" alt="Image" class="max-w-full max-h-full">
+        </div>
+        <div id="loginModal" class="flex items-center justify-center w-1/2">
+            <div class="w-full max-w-md p-8">
+                <h2 class="mb-6 text-3xl font-bold font-raleway">Admin Login</h2>
+                <form method="GET" action="/loginAdmin">
+                    <div class="mb-4">
+                        <div class="px-3 py-8 font-semibold rounded custom-btn">
+                            <label class="block mb-4 text-sm text-black font-raleway" for="username">USERNAME</label>
+                            <input
+                                class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                id="username" type="text" placeholder="Insert username" name="username" required>
+                            <label class="block mb-4 text-sm text-black font-raleway" for="password">PASSWORD</label>
+                            <input
+                                class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                id="password" type="password" placeholder="Password" name="password" required>
+                            <div class="flex items-center justify-end">
+                                <button
+                                    class="px-3 py-2 font-semibold text-white bg-red-600 rounded font-raleway hover:bg-red-800 focus:outline-none focus:shadow-outline"
+                                    type="submit" value="Log in">Sign In
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="/script/script.js" defer></script>
 </body>
+
 </html>
