--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -17,7 +17,7 @@
         <div id="loginModal" class="flex items-center justify-center w-1/2">
             <div class="w-full max-w-md p-8">
                 <h2 class="mb-6 text-3xl font-bold font-raleway">Admin Login</h2>
-                <form method="GET" action="/loginAdmin">
+                <form method="GET" action="/login-admin">
                     <div class="mb-4">
                         <div class="px-3 py-8 font-semibold rounded custom-btn">
                             <label class="block mb-4 text-sm text-black font-raleway" for="username">USERNAME</label>
