--- a/views/registerAdmin.ejs
+++ b/views/registerAdmin.ejs
@@ -19,7 +19,7 @@
         <div id="registerModal" class="flex items-center justify-center w-1/2">
             <div class="w-full max-w-xl p-8">
                 <h2 class="mb-6 text-3xl font-bold font-raleway">Admin Register</h2>
-                <form method="POST" action="/registerAdmin">
+                <form method="POST" action="/register-admin">
                     <% if (UsernameAvailability==false) { %>
                         <p>Username is already taken.</p>
                         <% } %>
