--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Theaters List</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/fe_style.css">
+  <link rel="stylesheet" href="/styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <h1>Theaters List</h1>
-  <ul>
+
+<body class="bg-black">
+  <div class="flex items-center justify-center">
+    <h1 class="mb-6 text-4xl font-semibold text-cfab7a">Theaters List</h1>
+  </div>
+
+  <div class="grid grid-cols-1 gap-4 p-4 text-cfab7a sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
     <% theaters.forEach(function(theater) { %>
-      <li>
-            <a href="/theater/<%= theater.location %>"><%= theater.location %></a>
-      </li>
-    <% }) %>
-  </ul>
+      <a href="/theater/<%= theater.location %>"
+        class="max-w-sm overflow-hidden transition-all duration-200 transform bg-gray-800 rounded shadow-lg hover:scale-105">
+        <img class="object-cover w-full h-64" src="/images/theater/<%= theater.location %>.jpg"
+          alt="<%= theater.location %>">
+        <div class="px-6 py-4">
+          <div class="mb-2 text-xl font-bold">
+            <%= theater.location %>
+          </div>
+          <p class="text-base">
+            <!-- Replace the text below with the description of the theater -->
+            This is a world class theater located at <%= theater.location %>.
+          </p>
+        </div>
+        <!-- Theater City -->
+        <div class="px-6 py-4">
+          <span class="inline-block px-3 py-1 mr-2 text-sm font-semibold bg-gray-200 rounded-full">
+            #<%= theater.location %>
+          </span>
+          <!-- Add more tags if necessary -->
+        </div>
+      </a>
+      <% }) %>
+  </div>
 </body>
+
 </html>
