Update movie list
- Change old /movies into /movie-test, /movie-test now become /movies
- Change home button on / redirect to / instead /home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
         <div class="container flex flex-col items-center justify-between mx-auto lg:flex-row">
             <a href="#" class="text-3xl font-semibold">TixOnline</a>
             <div class="text-[#cfab7a] mt-4 lg:mt-0">
-                <a href="/home" class="px-4 hover:text-white">Home</a>
+                <a href="/" class="px-4 hover:text-white">Home</a>
                 <a href="#nowplaying" class="px-4 hover:text-white smooth-scroll">Now Playing</a>
                 <a href="#comingsoon" class="px-4 hover:text-white smooth-scroll">Coming Soon</a>
                 <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
